# github-container-registry-example

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
src/myagent/: agent.py  api.py  model.py
src/myapp/: main.py
