[project]
name = "github-container-registry-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "openai-agents>=0.2.9",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "uvicorn>=0.35.0",
]
